# viewset_and_generic

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: make_course.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_options_and_more.py  0002_course_owner_lesson_owner.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py  pay_create.py
users/migrations/: 0001_initial.py  0002_payment.py  0002_remove_user_token.py
