[project]
name = "generic-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Tester",email = "test@skypro.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "coverage (>=7.9.1,<8.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "stripe (>=12.2.0,<13.0.0)",
    "django-celery-beat (<2.8.1)",
    "celery (>=5.5.3,<6.0.0)",
    "eventlet (>=0.40.1,<0.41.0)",
    "redis (>=6.2.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "forex-python(<=1.9.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]

